# PythonWrappedPluginExample

./: CMakeLists.txt  README.md
CMake/: setup-module.cmake
Module/: CMakeLists.txt
Module/Filters/: CMakeLists.txt  module.cmake  vtkMyFilter.cxx  vtkMyFilter.h
Plugin/: CMakeLists.txt
Plugin/xml/: MyFiltersGUI.xml  vtkMyFilter.xml
Testing/: CMakeLists.txt  testMyFilters.py
